## Process this file with automake to produce Makefile.in

sagscl_text_CXXFLAGS = -Wall -g -O2

bin_PROGRAMS = sagscl-text

sagscl_text_SOURCES = \
		      Config.cpp   \
		      Config.hpp   \
		      List.hpp     \
		      Log.cpp      \
		      Log.hpp      \
		      Loop.cpp     \
		      Loop.hpp     \
		      Main.cpp     \
		      Main.hpp     \
		      Network.cpp  \
		      Network.hpp  \
		      Opt.cpp      \
		      Opt.hpp      \
		      Packet.cpp   \
		      Packet.hpp   \
		      Program.cpp  \
		      Protocol.cpp \
		      Protocol.hpp \
		      UI.cpp       \
		      UI.hpp       \
		      Utils.cpp    \
		      Utils.hpp    \
		      Window.cpp   \
		      Window.hpp


